src/test/deca/syntax/invalid/provided/identifiant_invalide.deca
{
    int 1variable = 10; // Erreur : identifiant commence par un chiffre
}
